--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,80 @@
-<p>dinamicos works!</p>
+<h2>Template: <small> Dinámicos </small></h2>
+<hr>
+
+<form (ngSubmit)="guardar()"
+        autocomplete="off"
+        #miFormulario="ngForm">
+    <!--Nombre-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input class="form-control"
+                    [ngModel]="persona.nombre"
+                    name="nombre"
+                    required
+                    placeholder="Nombre de la persona">
+            <span class="form-text text-danger"
+                    *ngIf="miFormulario.controls.nombre?.errors && 
+                            miFormulario.controls.nombre?.touched">
+                Este campo es obligatorio
+            </span>
+        </div>
+    </div>
+
+    <!--Agregar favorito-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+
+            <div class="input-group">
+                <input class="form-control"
+                        [(ngModel)]="nuevoJuego"
+                        name="nuevoJuego"
+                        (keyup.enter)="agregarJuego()"
+                        placeholder="Agregar favorito">
+                <button class="btn btn-outline-primary"
+                        type="button"
+                        (click)="agregarJuego()">
+                    Agregar
+                </button>
+            </div>
+            
+        </div>
+    </div>
+
+    <!--Lista de favoritos-->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9">
+            <div class="input-group mb-1"
+                *ngFor="let juego of persona.favorito; let i = index">
+
+                <input class="form-control"
+                    [(ngModel)]="juego.nombre"
+                    name="favorito_{{i}}"
+                    required>
+
+                <button class="btn btn-outline-danger"
+                        (click)="eliminar(i)"
+                        type="button">
+                    Eliminar
+                </button>
+            </div>
+            
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <button type="button"
+                    class="btn btn-primary float-end"
+                    [disabled]="miFormulario.invalid"
+                    (click)="guardar()">
+                Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+<span>Persona</span>
+<pre>{{ persona | json}}</pre>
