--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,85 @@
-<p>switches works!</p>
+<h2>Reactivo: Switches</h2>
+<hr>
+
+<form>
+
+    <!--Radio-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Género</label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                        type="radio" 
+                        name="radioGenero" 
+                        value="M"
+                        id="radioMasculino">
+                <label class="form-check-label" for="radioMasculino">
+                  Masculino
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" 
+                        type="radio" 
+                        name="radioGenero" 
+                        value="F"
+                        id="radioFemenino" >
+                <label class="form-check-label" for="radioFemenino">
+                  Femenino
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!--awitches-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Notificaciones</label>
+        <div class="col-sm-9">
+            <div class="form-check form-switch mt-2">
+                <input class="form-check-input" 
+                        type="checkbox" 
+                        id="flexSwitchCheckChecked">
+                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+            </div>
+        </div>
+    </div>
+
+    <!--terminos-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                        type="checkbox"
+                        id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Términos y condiciones de uso
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!--boton-->
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end">
+                Guardar
+            </button>
+        </div>
+    </div>
+
+
+</form>
+
+<!-- <h5>Valor del formulario</h5>
+<pre>{{ miFirmulario.value | json }}</pre>
+<br>
+
+<h5>Persona</h5>
+<pre>{{ persona | json }}</pre>
+<br>
+
+<h5>Valid</h5>
+<pre>{{ miFirmulario.valid}}</pre>
+<br>
+
+<pre>Condiciones: </pre> -->
