--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,7 +1,7 @@
 <h2>Reactivo: Switches</h2>
 <hr>
 
-<form>
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()">
 
     <!--Radio-->
     <div class="row mb-3">
@@ -10,7 +10,7 @@
             <div class="form-check">
                 <input class="form-check-input" 
                         type="radio" 
-                        name="radioGenero" 
+                        formControlName="genero"
                         value="M"
                         id="radioMasculino">
                 <label class="form-check-label" for="radioMasculino">
@@ -20,7 +20,7 @@
               <div class="form-check">
                 <input class="form-check-input" 
                         type="radio" 
-                        name="radioGenero" 
+                        formControlName="genero"
                         value="F"
                         id="radioFemenino" >
                 <label class="form-check-label" for="radioFemenino">
@@ -37,6 +37,7 @@
             <div class="form-check form-switch mt-2">
                 <input class="form-check-input" 
                         type="checkbox" 
+                        formControlName="notificaciones"
                         id="flexSwitchCheckChecked">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
@@ -50,6 +51,7 @@
             <div class="form-check">
                 <input class="form-check-input" 
                         type="checkbox"
+                        formControlName="condiciones"
                         id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
                   Términos y condiciones de uso
@@ -61,7 +63,8 @@
     <!--boton-->
     <div class="row">
         <div class="col">
-            <button class="btn btn-primary float-end">
+            <button class="btn btn-primary float-end"
+                    type="submit">
                 Guardar
             </button>
         </div>
@@ -70,8 +73,8 @@
 
 </form>
 
-<!-- <h5>Valor del formulario</h5>
-<pre>{{ miFirmulario.value | json }}</pre>
+<h5>Valor del formulario</h5>
+<pre>{{ miFormulario.value | json }}</pre>
 <br>
 
 <h5>Persona</h5>
@@ -79,7 +82,7 @@
 <br>
 
 <h5>Valid</h5>
-<pre>{{ miFirmulario.valid}}</pre>
+<pre>{{ miFormulario.valid}}</pre>
 <br>
 
-<pre>Condiciones: </pre> -->
+<pre>Condiciones: </pre>
