--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -21,3 +21,15 @@
         {{ item.texto }}
     </li>
 </ul>
+
+<h2 class="mt-3">Validaciones</h2>
+<hr>
+
+<ul class="list-group">
+    <li class="list-group-item"
+        *ngFor="let item of authMenu"
+        routerLinkActive="active"
+        [routerLink]="[ item.ruta]">
+        {{ item.texto }}
+    </li>
+</ul>
