--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -57,7 +57,12 @@
                 <div class="col-sm-9">
                     <input type="password"
                         class="form-control"
+                        formControlName="password"
                         placeholder="Password del usuario">
+                    <span class="form-text text-danger"
+                        *ngIf="campoNoValido('password')">
+                        La contraseña debe tener más de 6 caracteres
+                    </span>
                 </div>
             </div>
 
@@ -67,7 +72,12 @@
                 <div class="col-sm-9">
                     <input type="password"
                         class="form-control"
+                        formControlName="password2"
                         placeholder="Confirmar la contarseña">
+                    <span class="form-text text-danger"
+                        *ngIf="campoNoValido('password2')">
+                        Las contraseñas deben ser iguales.
+                    </span>
                 </div>
             </div>
 
@@ -87,6 +97,9 @@
 
 <h2>Form valid: {{miFormulario.valid}}</h2>
 
+<h2>Form error:</h2>
+<pre>{{miFormulario.errors | json}}</pre>
+
 <h5>Nombre</h5>
 <pre>{{miFormulario.controls.nombre.errors | json}}</pre>
 <h5>Email</h5>
@@ -94,3 +107,9 @@
 
 <h5>username</h5>
 <pre>{{miFormulario.controls.username.errors | json}}</pre>
+
+<h5>password</h5>
+<pre>{{miFormulario.controls.password.errors | json}}</pre>
+
+<h5>confirmar</h5>
+<pre>{{miFormulario.controls.password2.errors | json}}</pre>
